# atlas

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  PRODUCT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/: CLAUDE.md  advisor.py  connectors.py  deps.py  events.py  forecasts.py  health.py  mcp_server.py  meetings.py  metrics.py  organizations.py  personas.py  projects.py  schemas.py  scope.py  teams.py  work_items.py
app/application/: CLAUDE.md  scope.py
app/domain/: CLAUDE.md  _time.py
app/infrastructure/: CLAUDE.md  static.py
docs/: VISION.md
docs/adr/: 0001-record-architecture-decisions.md  0002-async-ddd-monolith.md  0003-compute-on-read-analytics.md  0004-idempotent-sync-by-external-id.md  0005-env-keys-409-until-configured.md  0006-llm-via-openrouter-httpx.md  0007-apache-echarts.md  0008-persisted-analytics-snapshots.md
docs/architecture/: overview.md
migrations/: CLAUDE.md  env.py
migrations/versions/: 1e2fdb13f1c4_create_organizations.py  6183c646d3ed_add_indexes_to_work_items_team_id_and_.py  a5104220b660_add_unique_index_on_snapshot_scope_and_.py  cc8c7ce3fb52_advice_feedback_and_persona_guidance.py  d4dbe6431ee1_create_teams_projects_work_items_events.py  (+2 more)
tests/: CLAUDE.md  conftest.py  fakes.py  test_config.py  test_database.py  test_smoke.py
tests/api/: helpers.py  (+17 more)
web/: CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+197 files in other folders)
