[project]
name = "atlas"
version = "0.1.0"
description = "Atlas — Delivery Intelligence Platform"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "hypothesis>=6.120",
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest-cov>=7.1.0",
]

# Atlas is an application, not a distributable package — uv should not build/install it.
[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]

# Coverage only engages when pytest is passed --cov (make test / CI);
# bare `uv run pytest <path>` TDD runs skip it and the fail_under gate.
[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
fail_under = 94
skip_covered = true
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["app", "tests"]
exclude = ["migrations/"]
